--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
 title: Dev Song's Tech Blog
-tagline: "A Jekyll theme based on Lanyon"
+tagline: "Daseul Song Blog"
 description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
 baseurl: ""
 url: https://aleatorik.github.io
@@ -24,8 +24,8 @@ version: 1.0.0
 
 # About/contact
 author:
-  name: Codinfox
-  description: A passionate <strong>developer and researcher</strong>, learning to be a giant.
+  name: Daseul Song
+  description: <strong>개발자</strong>로 다시 만나요.
   gravatar: 3c2986ad7ac1f2230ea3596f44563328 # md5 hash of your email address
   contact:
     #    linkedin: https://www.linkedin.com/in/lizhihao
@@ -46,15 +46,15 @@ nav:
   About:
     - "/about/"
   Github Project:
-    - "http://codinfox.github.io/"
+    - "http://aleatorik.github.io/"
 
 # Where are tags and categories displayed
 tag_page: "/blog/tags/"
 category_page: "/blog/categories/"
 
 hero:
-  image: /public/img/we_will_be_giants_by_yalestewart.jpg
-  caption: Original Artwork &copy; <a href="http://yalestewart.deviantart.com/art/We-Will-Be-Giants-370176475">Yale Stewart</a>
+#  image: /public/img/we_will_be_giants_by_yalestewart.jpg
+#  caption: Original Artwork &copy; <a href="http://yalestewart.deviantart.com/art/We-Will-Be-Giants-370176475">Yale Stewart</a>
 
 # Puglins
 mathjax: true # whether support mathjax
