--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Info
 title: Dev Song's Tech Blog
 tagline: "테크가이 Dan 개발로그"
-description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
+description: ""
 baseurl: ""
 url: https://aleatorik.github.io
 logo: "/public/logo.png"
