update: Modify tagline

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
 title: Dev Song's Tech Blog
-tagline: "테크가이 Dan 개발학습로그"
+tagline: "Dan 개발학습로그"
 description: ""
 baseurl: ""
 url: https://aleatorik.github.io
